--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "element-plus": "^2.9.0",
     "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
